# GazzeriOnHaskell

./: .gitignore  README.md
Gazzerion/: Gazzerion.cabal
Gazzerion/src/: Card.hs  Draw.hs  Field.hs  GazWorld.hs  Header.hs  Main.hs
Gazzerion/src/Magic/: CanUse.hs  Description.hs  Func.hs  Load.hs
